# HaskellRaytracer

./: .gitignore  LICENSE  README.md  raycaster.cabal  stack.yaml
app/: Main.hs
scenes/: basic.json
scripts/: run
src/: Camera.hs  Color.hs  Colour.hs  Colours.hs  DataTypes.hs  Intersection.hs  Main.hs  Quaternion.hs  Ray.hs  RayCaster.hs  Render.hs  Shapes.hs  Transformations.hs  Utils.hs  Vector.hs
src/RayCaster/: Camera.hs  Color.hs  DataTypes.hs  Intersection.hs  JsonSceneDef.hs  Quaternion.hs  Ray.hs  Render.hs  Shapes.hs  Transformations.hs  Utils.hs  Vector.hs
test/: Tests.hs
test/Tests/: Shapes.hs  Util.hs  Vector.hs
