name:                raycaster
version:             0.1.0.0
synopsis:            A simple raycaster built in haskell
license:             Apache-2.0
license-file:        LICENSE
author:              Boris Kachscovsky
maintainer:          boris@ustwo.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable raycaster
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9, JuicyPixels == 3.2.7
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Camera,
                       Color,
                       DataTypes,
                       Intersection,
                       Quaternion,
                       Ray,
                       Shapes,
                       Transformations,
                       Utils,
                       Vector
