name:                raycaster
version:             0.1.0.0
synopsis:            Haskell raytracer
description:         A simple raycaster built in haskell
license:             Apache-2.0
license-file:        LICENSE
author:              Boris Kachscovsky
maintainer:          boris@ustwo.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/bkach/HaskellRaycaster

executable raycaster
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5,
                       JuicyPixels
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Camera,
                       Color,
                       DataTypes,
                       Intersection,
                       Quaternion,
                       Ray,
                       Shapes,
                       Transformations,
                       Utils,
                       Vector

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test,
                       src
  build-depends:       base,
                       HUnit,
                       QuickCheck,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2
  other-modules:       Camera,
                       Color,
                       DataTypes,
                       Intersection,
                       Quaternion,
                       Ray,
                       Shapes,
                       Transformations,
                       Utils,
                       Vector,
                       Tests.Util,
                       Tests.Shapes,
                       Tests.Vector
