name:                raycaster
version:             0.1.0.0
synopsis:            Haskell raytracer
description:         A simple raycaster built in haskell
license:             Apache-2.0
license-file:        LICENSE
author:              Boris Kachscovsky
maintainer:          boris@ustwo.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/bkach/HaskellRaycaster

library
  hs-source-dirs:      src
  exposed-modules:       Camera
                     , Color
                     , DataTypes
                     , Intersection
                     , Quaternion
                     , Ray
                     , Shapes
                     , Transformations
                     , Utils
                     , Vector
  build-depends:       base >=4.8 && <5
                     , JuicyPixels
  default-language:    Haskell2010

executable raycaster-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.8 && <5
                     , JuicyPixels
                     , raycaster
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , raycaster
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  other-modules:       Tests.Util
                     , Tests.Shapes
                     , Tests.Vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
